--- a/index.html
+++ b/index.html
@@ -64,9 +64,11 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
+
                 <div class="bc_carousel"></div>
+                <div class="bc_aquafisio"></div>
                 <img src="./imagens/aquafisio-slide.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-md-block fs">
+                <div class="carousel-caption d-md-block fs hdbutton">
                     <h5>Conheça nossa academia</h5>
                     <div class="main_buttons">
                         <button>CONTATO</button>
