--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" >
     <title>Academia Aqua Fisio Fitness – Musculação, Natação, Fit Dance, Treino Funcional, Spinnig e muito mais</A>
     </title>
-
+    <link rel="icon" type="image/x-icon" href="./imagens/aquafisioico.png">
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -19,9 +19,9 @@
         nonce="3r6XkOoT"></script>
 
     <div class="container-fluid navbarcont">
-        <nav class="navbar bg-light">
+        <nav class="navbar bg-light fixed-top">
             <div class="container">
-                <a class="navbar-brand logo" href="#"><img src="./imagens/aqualogopequena.png" alt=""></a>
+                <a class="navbar-brand logo" href="./index.html"><img src="./imagens/aqualogopequena.png" alt=""></a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
@@ -31,22 +31,44 @@
                 <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
                     <ul class="nav justify-content-center navul">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="Pagina Inicial" href="#">HOME</a>
+                            <a class="nav-link active" aria-current="Pagina Inicial" href="./index.html">HOME</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">A ACADEMIA</a>
+                            <a class="nav-link" href="./pages/academia.html">A ACADEMIA</a>
                         </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                              MODALIDADES
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                              <li><a class="dropdown-item" href="./modalidades/musculacao.html">Musculação</a></li>
+                              <li><a class="dropdown-item" href="#">Natação – Adulto, Infantil e Bebês</a></li>
+                              <li><a class="dropdown-item" href="#">Abdominal</a></li>
+                              <li><a class="dropdown-item" href="#">Alongamento</a></li>
+                              <li><a class="dropdown-item" href="#">FitDance</a></li>
+                              <li><a class="dropdown-item" href="#">GAP</a></li>
+                              <li><a class="dropdown-item" href="#">Ginástica</a></li>
+                              <li><a class="dropdown-item" href="#">Hidroginastica</a></li>
+                              <li><a class="dropdown-item" href="#">Hiit</a></li>
+                              <li><a class="dropdown-item" href="#">Muai Thay</a></li>
+                              <li><a class="dropdown-item" href="#">Pilates</a></li>
+                              <li><a class="dropdown-item" href="#">Ritmos para melhor idade</a></li>
+                              <li><a class="dropdown-item" href="#">Spinning</a></li>
+                              <li><a class="dropdown-item" href="#">Treino Funcional</a></li>
+                              <li><a class="dropdown-item" href="#">Yoga</a></li>
+                              <li><a class="dropdown-item" href="#">Karatê</a></li>
+                            </ul>
+                          </li>
+
+
                         <li class="nav-item">
-                            <a class="nav-link" href="#">MODALIDADES</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link">A CLÍNICA</a>
+                            <a class="nav-link" href="./pages/clinica.html">A CLÍNICA</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">PROMOÇÕESS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">CONTATO & ENDEREÇO</a>
+                            <a class="nav-link" href="./pages/contatoendereco.html">CONTATO & ENDEREÇO</a>
                         </li>
                     </ul>
                 </div>
@@ -70,10 +92,6 @@
                 <img src="./imagens/aquafisio-slide.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-md-block fs hdbutton">
                     <h5>Conheça nossa academia</h5>
-                    <div class="main_buttons">
-                        <button>CONTATO</button>
-                        <button>ENDEREÇO</button>
-                    </div>
                 </div>
             </div>
 
@@ -115,7 +133,7 @@
             </div>
             <div class="collapse navbar-collapse listacollapse" id="modToggleExternalContent">
                 <ul class="list-group list-group-horizontal">
-                    <li class="list-group-item flex-fill lista"><a href="">Musculação</a></li>
+                    <li class="list-group-item flex-fill lista"><a href="./modalidades/musculacao.html">Musculação</a></li>
                     <li class="list-group-item flex-fill lista"><a href="">Natação – Adulto, Infantil e Bebês</a></li>
                     <li class="list-group-item flex-fill lista"><a href="">Abdominal</a></li>
                     <li class="list-group-item flex-fill lista"><a href="">Alongamento</a></li>
@@ -172,49 +190,25 @@
 
     <section class="sec_contato">
         <div class="container-fluid cont_contato">
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 gridcont">
+            <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 gridcont">
                 <div class="contato col">
                     <p class="aweight">CONTATO</p>
-                    <a href="tel:+551334669743">(13) 3466-9743</a>
-                    <a href="mailto:contato@academiaaquafisio.com.br">contato@academiaaquafisio.com.br</a>
+                    <a class="acolor" href="tel:+551334669743">(13) 3466-9743</a>
+                    <a class="acolor" href="mailto:contato@academiaaquafisio.com.br">contato@academiaaquafisio.com.br</a>
                     <p>Praça Dr. Bernardino de Campos, 142 – Centro – São Vicente/SP</p>
-                    <p>fb.com/<a class="aweight" href="https://www.facebook.com/aquafisiofitness/">aquafisiofitness</a>
+                    <p>facebook.com/<a class="aweight linkcolor" href="https://www.facebook.com/aquafisiofitness/">aquafisiofitness</a>
                     </p>
-                    <p>instagram.com/<a class="aweight"
+                    <p>instagram.com/<a class="aweight linkcolor"
                             href="https://www.instagram.com/academiaaquafisio/">academiaaquafisio</a></p>
                 </div>
                 <div class="mapasite col">
                     <p class="aweight">MAPA DO SITE</p>
-                    <a href="#">Home</a>
-                    <a href="#">A Academia</a>
-                    <a href="#">A Clínica</a>
-                    <a href="#">Promoções</a>
-                    <a href="#">Contato & Endereço</a>
+                    <a class="acolor" href="#">Home</a>
+                    <a class="acolor" href="#">A Academia</a>
+                    <a class="acolor" href="#">A Clínica</a>
+                    <a class="acolor" href="#">Promoções</a>
+                    <a class="acolor" href="#">Contato & Endereço</a>
                 </div>
-
-                <div class="insta ">
-                    <div class="inst">
-                        <div class="continsta rounded">
-                            <a href="https://www.instagram.com/academiaaquafisio/" target="_blank">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                                    <path
-                                        d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z" />
-                                </svg>
-                                <p>Clique para acessar nosso perfil no Instagram</p>
-                            </a>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="facebookiframe col">
-                    <iframe
-                    src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Faquafisiofitness&tabs=timeline&width=340&height=250&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId=249060100654969"
-                    width="100%" height="100%" style="border:none;overflow:hidden;" scrolling="no" frameborder="0"
-                    allowfullscreen="true"
-                    allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-                </div>
-
-
             </div>
         </div>
     </section>
