--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                               <li><a class="dropdown-item" href="./modalidades/musculacao.html">Musculação</a></li>
-                              <li><a class="dropdown-item" href="#">Natação – Adulto, Infantil e Bebês</a></li>
-                              <li><a class="dropdown-item" href="#">Abdominal</a></li>
-                              <li><a class="dropdown-item" href="#">Alongamento</a></li>
-                              <li><a class="dropdown-item" href="#">FitDance</a></li>
+                              <li><a class="dropdown-item" href="./modalidades/natacao.html">Natação – Adulto, Infantil e Bebês</a></li>
+                              <li><a class="dropdown-item" href="./modalidades/abdominal.html">Abdominal</a></li>
+                              <li><a class="dropdown-item" href="./modalidades/alongamento.html">Alongamento</a></li>
+                              <li><a class="dropdown-item" href="./modalidades/fitdance.html">FitDance</a></li>
                               <li><a class="dropdown-item" href="#">GAP</a></li>
                               <li><a class="dropdown-item" href="#">Ginástica</a></li>
                               <li><a class="dropdown-item" href="#">Hidroginastica</a></li>
@@ -65,7 +65,7 @@
                             <a class="nav-link" href="./pages/clinica.html">A CLÍNICA</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">PROMOÇÕESS</a>
+                            <a class="nav-link" href="#">PROMOÇÕES</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./pages/contatoendereco.html">CONTATO & ENDEREÇO</a>
@@ -134,12 +134,12 @@
             <div class="collapse navbar-collapse listacollapse" id="modToggleExternalContent">
                 <ul class="list-group list-group-horizontal">
                     <li class="list-group-item flex-fill lista"><a href="./modalidades/musculacao.html">Musculação</a></li>
-                    <li class="list-group-item flex-fill lista"><a href="">Natação – Adulto, Infantil e Bebês</a></li>
-                    <li class="list-group-item flex-fill lista"><a href="">Abdominal</a></li>
-                    <li class="list-group-item flex-fill lista"><a href="">Alongamento</a></li>
+                    <li class="list-group-item flex-fill lista"><a href="./modalidades/natacao.html">Natação – Adulto, Infantil e Bebês</a></li>
+                    <li class="list-group-item flex-fill lista"><a href="./modalidades/abdominal.html">Abdominal</a></li>
+                    <li class="list-group-item flex-fill lista"><a href="./modalidades/alongamento.html">Alongamento</a></li>
                 </ul>
                 <ul class="list-group list-group-horizontal">
-                    <li class="list-group-item flex-fill lista"><a href="">FitDance</a></li>
+                    <li class="list-group-item flex-fill lista"><a href="./modalidades/fitdance.html">FitDance</a></li>
                     <li class="list-group-item flex-fill lista"><a href="">GAP</a></li>
                     <li class="list-group-item flex-fill lista"><a href="">Ginástica</a></li>
                     <li class="list-group-item flex-fill lista"><a href="">Hidroginastica</a></li>
@@ -203,11 +203,11 @@
                 </div>
                 <div class="mapasite col">
                     <p class="aweight">MAPA DO SITE</p>
-                    <a class="acolor" href="#">Home</a>
-                    <a class="acolor" href="#">A Academia</a>
-                    <a class="acolor" href="#">A Clínica</a>
+                    <a class="acolor" href="./index.html">Home</a>
+                    <a class="acolor" href="./pages/academia.html">A Academia</a>
+                    <a class="acolor" href="./pages/clinica.html">A Clínica</a>
                     <a class="acolor" href="#">Promoções</a>
-                    <a class="acolor" href="#">Contato & Endereço</a>
+                    <a class="acolor" href="./pages/contatoendereco.html">Contato & Endereço</a>
                 </div>
             </div>
         </div>
