--- a/modalidades/musculacao.html
+++ b/modalidades/musculacao.html
@@ -29,7 +29,7 @@
                             <a class="nav-link active" aria-current="Pagina Inicial" href="../index.html">HOME</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./academia.html">A ACADEMIA</a>
+                            <a class="nav-link" href="../pages/academia.html">A ACADEMIA</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -38,10 +38,10 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="../modalidades/musculacao.html">Musculação</a></li>
-                                <li><a class="dropdown-item" href="#">Natação – Adulto, Infantil e Bebês</a></li>
-                                <li><a class="dropdown-item" href="#">Abdominal</a></li>
-                                <li><a class="dropdown-item" href="#">Alongamento</a></li>
-                                <li><a class="dropdown-item" href="#">FitDance</a></li>
+                                <li><a class="dropdown-item" href="../modalidades/natacao.html">Natação – Adulto, Infantil e Bebês</a></li>
+                                <li><a class="dropdown-item" href="../modalidades/abdominal.html">Abdominal</a></li>
+                                <li><a class="dropdown-item" href="../modalidades/alongamento.html">Alongamento</a></li>
+                                <li><a class="dropdown-item" href="../modalidades/fitdance.html">FitDance</a></li>
                                 <li><a class="dropdown-item" href="#">GAP</a></li>
                                 <li><a class="dropdown-item" href="#">Ginástica</a></li>
                                 <li><a class="dropdown-item" href="#">Hidroginastica</a></li>
@@ -56,13 +56,13 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./clinica.html">A CLÍNICA</a>
+                            <a class="nav-link" href="../pages/clinica.html">A CLÍNICA</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">PROMOÇÕESS</a>
+                            <a class="nav-link" href="#">PROMOÇÕES</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./contatoendereco.html">CONTATO & ENDEREÇO</a>
+                            <a class="nav-link" href="../pages/contatoendereco.html">CONTATO & ENDEREÇO</a>
                         </li>
                     </ul>
                 </div>
