--- a/modalidades/abdominal.html
+++ b/modalidades/abdominal.html
@@ -29,7 +29,7 @@
                             <a class="nav-link active" aria-current="Pagina Inicial" href="../index.html">HOME</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./academia.html">A ACADEMIA</a>
+                            <a class="nav-link" href="../pages/academia.html">A ACADEMIA</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -56,13 +56,13 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./clinica.html">A CLÍNICA</a>
+                            <a class="nav-link" href="../pages/clinica.html">A CLÍNICA</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">PROMOÇÕES</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./contatoendereco.html">CONTATO & ENDEREÇO</a>
+                            <a class="nav-link" href="../pages/contatoendereco.html">CONTATO & ENDEREÇO</a>
                         </li>
                     </ul>
                 </div>
@@ -73,41 +73,18 @@
     <main class="aacademia">
         <div class="container-fluid">
             <div class="container accont">
-                <h1>A Clínica – AquaFisio Fitness</h1>
-
-                <p>Oferecemos um espaço estruturado e planejado para realização de todos os tipos de tratamentos em
-                    Fisioterapia, Hidroterapia, Natação para Bebês, RPG, Drenagem Linfática, Acupuntura e
-                    Hidroginástica.</p>
-
-                <p>Tratamentos de reabilitação fisioterapêutica de contusões, pós fraturas, entorses, luxações, e por
-                    meio de equipamentos modernos proporcionar a analgesia no alívio da dor, tratamento do processo
-                    inflamatório e melhoria na circulação, alongamentos e fortalecimento muscular na busca de
-                    recuperação dos movimentos, e reequilíbrio muscular e postural.</p>
+                <h1>Abdominal – AquaFisio Fitness</h1>
+                <p>Aulas que trabalham diferentes tipos de abdominais. A aula de Abdominal foi criada e direcionada para o fortalecimento e a definição da musculatura abdominal. Ela foi elaborada para trabalhar a musculatura com alta intensidade, permitindo que os benefícios ocorram rapidamente.</p>
             </div>
         </div>
     </main>
-
-    <section class="sec_modalidade">
-        <div class="container">
-            <div class="mod_container">
-                <p>NOSSOS TRATAMENTOS:</p>
-                <button class="btn btn-primary btncolmob" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#modToggleExternalContent" aria-expanded="false"
-                    aria-controls="modToggleExternalContent">⯆</button>
+    <section class="beneficios">
+        <div class="container-fluid">
+            <div class="container">
+                <h3>Benefícios de Aula de Abdominal:</h3>
+                <p>Desenvolve a força abdominal em função das caneleiras utilizadas nas pernas e braços. Os exercícios selecionados de acordo com critérios de segurança e eficiência promovem real sensação de trabalho de intensidade sobre a musculatura, ocorrendo a definição abdominal.
             </div>
-            <div class="collapse navbar-collapse listacollapse" id="modToggleExternalContent">
-                <ul class="list-group list-group-horizontal">
-                    <li class="list-group-item flex-fill lista">Fisioterapia</li>
-                    <li class="list-group-item flex-fill lista">Natação para Bebês</li>
-                    <li class="list-group-item flex-fill lista">Drenagem Linfática</li>
-                    <li class="list-group-item flex-fill lista">Hidroginástica</li>
-                </ul>
-                <ul class="list-group list-group-horizontal">
-                    <li class="list-group-item flex-fill lista">Hidroterapia</li>
-                    <li class="list-group-item flex-fill lista">RPG</li>
-                    <li class="list-group-item flex-fill lista">Acupuntura</li>
-                </ul>
-            </div>
+        </div>
     </section>
 
 
@@ -115,45 +92,13 @@
         <div class="images_p">
 
             <div class="container">
-                <p>Algumas Fotos da Clínica:</p>
-                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 picgrid">
-                    <div class="col"><img class="img-fluid rounded"
-                            src="../imagens/Foto-para-site-Aqua-Fisio-3-1-1024x576.jpg" alt=""></div>
-                    <div class="col"><img class="img-fluid rounded"
-                            src="../imagens/Foto-para-site-Aqua-Fisio-1-1-1024x576.jpg" alt=""></div>
-                    <div class="col"><img class="img-fluid rounded"
-                            src="../imagens/Foto-para-site-Aqua-Fisio-2-1-1024x576.jpg" alt=""></div>
-                    <div class="col"><img class="img-fluid rounded"
-                            src="../imagens/Foto-para-site-Aqua-Fisio-1024x576.jpg" alt=""></div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="convenios">
-        <div class="container-fluid">
-            <div class="container">
-                <div class="images_p">
-                    <p>Conheça os convênios que atendemos:</p>
-                    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 picgrid">
-                        <div class="col colop"><img class="img-fluid rounded" src="../imagens/convenios/1-300x300.png" alt="">
-                        </div>
-                        <div class="col colop"><img class="img-fluid rounded" src="../imagens/convenios/8-300x300.png" alt="">
-                        </div>
-                        <div class="col colop"><img class="img-fluid rounded" src="../imagens/convenios/7-300x300.png" alt="">
-                        </div>
-                        <div class="col colop"><img class="img-fluid rounded" src="../imagens/convenios/5-300x300.png" alt="">
-                        </div>
-                        <div class="col colop"><img class="img-fluid rounded" src="../imagens/convenios/6-300x300.png" alt="">
-                        </div>
-                        <div class="col colop"><img class="img-fluid rounded" src="../imagens/convenios/3-300x300.png" alt="">
-                        </div>
-                        <div class="col colop"><img class="img-fluid rounded" src="../imagens/convenios/4-300x300.png" alt="">
-                        </div>
-                        <div class="col colop"><img class="img-fluid rounded" src="../imagens/convenios/2-300x300.png" alt="">
-                        </div>
-
-
+                <p>Algumas fotos da academia:</p>
+                <div class="row row-cols-1 row-cols-sm-1 row-cols-md-3 picgrid">
+                    <div class="col"><img class="img-fluid rounded" src="../imagens/abdominal/3-3-1024x768.jpg" alt="">
+                    </div>
+                    <div class="col"><img class="img-fluid rounded" src="../imagens/abdominal/2-3-1024x768.jpg" alt="">
+                    </div>
+                    <div class="col"><img class="img-fluid rounded" src="../imagens/abdominal/1-3-1024x768.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -178,7 +123,7 @@
                 <div class="mapasite col">
                     <p class="aweight">MAPA DO SITE</p>
                     <a class="acolor" href="../index.html">Home</a>
-                    <a class="acolor" href="../modalidades/musculacao.html">A Academia</a>
+                    <a class="acolor" href="../pages/academia.html">A Academia</a>
                     <a class="acolor" href="../pages/clinica.html">A Clínica</a>
                     <a class="acolor" href="#">Promoções</a>
                     <a class="acolor" href="../pages/contatoendereco.html">Contato & Endereço</a>
