--- a/pages/academia.html
+++ b/pages/academia.html
@@ -38,10 +38,10 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="../modalidades/musculacao.html">Musculação</a></li>
-                                <li><a class="dropdown-item" href="#">Natação – Adulto, Infantil e Bebês</a></li>
-                                <li><a class="dropdown-item" href="#">Abdominal</a></li>
-                                <li><a class="dropdown-item" href="#">Alongamento</a></li>
-                                <li><a class="dropdown-item" href="#">FitDance</a></li>
+                                <li><a class="dropdown-item" href="../modalidades/natacao.html">Natação – Adulto, Infantil e Bebês</a></li>
+                                <li><a class="dropdown-item" href="../modalidades/abdominal.html">Abdominal</a></li>
+                                <li><a class="dropdown-item" href="../modalidades/alongamento.html">Alongamento</a></li>
+                                <li><a class="dropdown-item" href="../modalidades/fitdance.html">FitDance</a></li>
                                 <li><a class="dropdown-item" href="#">GAP</a></li>
                                 <li><a class="dropdown-item" href="#">Ginástica</a></li>
                                 <li><a class="dropdown-item" href="#">Hidroginastica</a></li>
@@ -59,7 +59,7 @@
                             <a class="nav-link" href="./clinica.html">A CLÍNICA</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">PROMOÇÕESS</a>
+                            <a class="nav-link" href="#">PROMOÇÕES</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./contatoendereco.html">CONTATO & ENDEREÇO</a>
@@ -95,12 +95,12 @@
             <div class="collapse navbar-collapse listacollapse" id="modToggleExternalContent">
                 <ul class="list-group list-group-horizontal">
                     <li class="list-group-item flex-fill lista"><a href="../modalidades/musculacao.html">Musculação</a></li>
-                    <li class="list-group-item flex-fill lista"><a href="">Natação – Adulto, Infantil e Bebês</a></li>
-                    <li class="list-group-item flex-fill lista"><a href="">Abdominal</a></li>
-                    <li class="list-group-item flex-fill lista"><a href="">Alongamento</a></li>
+                    <li class="list-group-item flex-fill lista"><a href="../modalidades/natacao.html">Natação – Adulto, Infantil e Bebês</a></li>
+                    <li class="list-group-item flex-fill lista"><a href="../modalidades/abdominal.html">Abdominal</a></li>
+                    <li class="list-group-item flex-fill lista"><a href="../modalidades/alongamento.html">Alongamento</a></li>
                 </ul>
                 <ul class="list-group list-group-horizontal">
-                    <li class="list-group-item flex-fill lista"><a href="">FitDance</a></li>
+                    <li class="list-group-item flex-fill lista"><a href="../modalidades/fitdance.html">FitDance</a></li>
                     <li class="list-group-item flex-fill lista"><a href="">GAP</a></li>
                     <li class="list-group-item flex-fill lista"><a href="">Ginástica</a></li>
                     <li class="list-group-item flex-fill lista"><a href="">Hidroginastica</a></li>
@@ -167,10 +167,10 @@
                 <div class="mapasite col">
                     <p class="aweight">MAPA DO SITE</p>
                     <a class="acolor" href="../index.html">Home</a>
-                    <a class="acolor" href="./academia.html">A Academia</a>
-                    <a class="acolor" href="./clinica.html">A Clínica</a>
+                    <a class="acolor" href="../pages/academia.html">A Academia</a>
+                    <a class="acolor" href="../pages/clinica.html">A Clínica</a>
                     <a class="acolor" href="#">Promoções</a>
-                    <a class="acolor" href="./contatoendereco.html">Contato & Endereço</a>
+                    <a class="acolor" href="../pages/contatoendereco.html">Contato & Endereço</a>
                 </div>
             </div>
         </div>
