--- a/pages/contatoendereco.html
+++ b/pages/contatoendereco.html
@@ -37,11 +37,11 @@
                                 MODALIDADES
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Musculação</a></li>
-                                <li><a class="dropdown-item" href="#">Natação – Adulto, Infantil e Bebês</a></li>
-                                <li><a class="dropdown-item" href="#">Abdominal</a></li>
-                                <li><a class="dropdown-item" href="#">Alongamento</a></li>
-                                <li><a class="dropdown-item" href="#">FitDance</a></li>
+                                <li><a class="dropdown-item" href="../modalidades/musculacao.html">Musculação</a></li>
+                                <li><a class="dropdown-item" href="../modalidades/natacao.html">Natação – Adulto, Infantil e Bebês</a></li>
+                                <li><a class="dropdown-item" href="../modalidades/abdominal.html">Abdominal</a></li>
+                                <li><a class="dropdown-item" href="../modalidades/alongamento.html">Alongamento</a></li>
+                                <li><a class="dropdown-item" href="../modalidades/fitdance.html">FitDance</a></li>
                                 <li><a class="dropdown-item" href="#">GAP</a></li>
                                 <li><a class="dropdown-item" href="#">Ginástica</a></li>
                                 <li><a class="dropdown-item" href="#">Hidroginastica</a></li>
@@ -59,7 +59,7 @@
                             <a class="nav-link" href="./clinica.html">A CLÍNICA</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">PROMOÇÕESS</a>
+                            <a class="nav-link" href="#">PROMOÇÕES</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">CONTATO & ENDEREÇO</a>
@@ -203,11 +203,11 @@
                 </div>
                 <div class="mapasite col">
                     <p class="aweight">MAPA DO SITE</p>
-                    <a class="acolor" href="#">Home</a>
-                    <a class="acolor" href="#">A Academia</a>
-                    <a class="acolor" href="#">A Clínica</a>
+                    <a class="acolor" href="../index.html">Home</a>
+                    <a class="acolor" href="./academia.html">A Academia</a>
+                    <a class="acolor" href="./clinica.html">A Clínica</a>
                     <a class="acolor" href="#">Promoções</a>
-                    <a class="acolor" href="#">Contato & Endereço</a>
+                    <a class="acolor" href="./contatoendereco.html">Contato & Endereço</a>
                 </div>
 
                 <!--<div class="insta ">
