--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/x-icon" href="./imagens/aquafisioico.png">
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/a359a9c6d3.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -20,13 +21,13 @@
 
     <div class="container-fluid navbarcont">
         <nav class="navbar bg-light fixed-top">
-            <div class="container">
+            <div class="container navcont">
                 <a class="navbar-brand logo" href="./index.html"><img src="./imagens/aqualogopequena.png" alt=""></a>
 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler navbut" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
                     aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <i class="fa-solid fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
                     <ul class="nav justify-content-center navul">
@@ -113,12 +114,12 @@
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
             data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <i class="fa-solid fa-chevron-left" aria-hidden="true"></i>
             <span class="visually-hidden">Previous</span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
             data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <i class="fa-solid fa-chevron-right" aria-hidden="true"></i>
             <span class="visually-hidden">Next</span>
         </button>
     </div>
@@ -129,7 +130,7 @@
                 <p>CONHEÇA NOSSAS MODALIDADES:</p>
                 <button class="btn btn-primary btncolmob" type="button" data-bs-toggle="collapse"
                     data-bs-target="#modToggleExternalContent" aria-expanded="false"
-                    aria-controls="modToggleExternalContent">⯆</button>
+                    aria-controls="modToggleExternalContent"><i class="fa-solid fa-caret-down"></i></button>
             </div>
             <div class="collapse navbar-collapse listacollapse" id="modToggleExternalContent">
                 <ul class="list-group list-group-horizontal">
@@ -221,7 +222,7 @@
 
             <div class="backtop">
                 <a href="#" class="back-top" title="Voltar ao topo">
-                    >
+                    <i class="fa-solid fa-caret-right"></i>
                 </a>
             </div>
         </div>
