--- a/pages/contatoendereco.html
+++ b/pages/contatoendereco.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/x-icon" href="../imagens/aquafisioico.png">
     <link rel="stylesheet" href="../bootstrap.min.css">
     <link rel="stylesheet" href="../style.css">
+    <script src="https://kit.fontawesome.com/a359a9c6d3.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -21,7 +22,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
                     aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <i class="fa-solid fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
                     <ul class="nav justify-content-center navul">
@@ -245,7 +246,7 @@
 
             <div class="backtop">
                 <a href="#" class="back-top" title="Voltar ao topo">
-                    >
+                    <i class="fa-solid fa-caret-right"></i>
                 </a>
             </div>
         </div>
